# cltorch-benchmarking

./: CMakeLists.txt  README.md  launchtimings.txt  test_apply1.cpp  test_apply1b.cpp  test_apply3.cpp  test_apply3_flat.cpp  test_apply3_perclt.cpp  test_apply3_singleinfosbuf.cpp  test_applystrided.cpp  test_launch.cpp  test_localbuffer.cpp  test_privatebuffer.cpp  test_workgroupsize.cpp
results/: apply3_flat.txt  launchtimings.txt
